<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_home"
            android:checked="false"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/menu_action_home" />
        <item
            android:id="@+id/action_item_a"
            android:checked="false"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/menu_action_item_a" />

        <item
            android:id="@+id/action_item_b"
            android:checked="false"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/menu_action_item_b" />

        <item
            android:id="@+id/action_item_c"
            android:checked="false"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/menu_action_item_c" />

        <item
            android:id="@+id/action_item_d"
            android:checked="false"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/menu_action_item_d" />

        <item
            android:id="@+id/action_item_e"
            android:checked="false"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/menu_action_item_e" />
    </group>

    <group
        android:id="@+id/nav_footer">

        <item
            android:id="@+id/nav_menu_version"
            app:actionLayout="@layout/menu_action_layout_version"
            android:title=""/>
    </group>

</menu>
