<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data class="MobileDetectionFragmentBinding"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="bottom"
                android:orientation="vertical"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/TextInputHint"
                app:errorTextAppearance="@style/TextInputError">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_name"
                    android:theme="@style/TextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:inputType="textPersonName"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:background="@drawable/text_input_edit_bg_white"
                    android:hint="@string/label_name"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_name"
                android:layout_marginTop="12dp"
                android:gravity="bottom"
                android:orientation="vertical"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/TextInputHint"
                app:errorTextAppearance="@style/TextInputError">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_phone"
                    android:theme="@style/TextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:inputType="numberSigned"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:background="@drawable/text_input_edit_bg_white"
                    android:hint="@string/label_phone"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_phone"
                android:layout_marginTop="12dp"
                android:gravity="bottom"
                android:orientation="vertical"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/TextInputHint"
                app:errorTextAppearance="@style/TextInputError">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_content"
                    android:theme="@style/TextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:inputType="textLongMessage"
                    android:maxLines="5"
                    android:background="@drawable/text_input_edit_bg_white"
                    android:hint="@string/label_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_active"
                style="@style/BottomGreenButtonFullWidthStyle"
                android:layout_below="@+id/til_content"
                android:layout_marginTop="20dp"
                android:text="@string/txt_active" />


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</layout>